--- a/app/index.html
+++ b/app/index.html
@@ -148,7 +148,7 @@
                         <p>Все варианты пополнения аккаунта смотрите <a href="#" class="links-accent">здесь.</a></p>
                     </div>
 
-                    <a href="#" class="btn btn-accent d-mobile">КУПИТЬ</a>
+                    <button class="btn btn-accent d-mobile">КУПИТЬ</button>
                 </div>
                 <div class="tabs__content">
                     <form method="post" class="exchange-wrapper form">
@@ -185,7 +185,7 @@
                                 </label>
                             </div>
                         </div>
-                        <a href="#" class="btn btn-accent">КУПИТЬ</a>
+                        <button class="btn btn-accent">КУПИТЬ</button>
 
                     </form>
 
@@ -195,6 +195,8 @@
                         <p>0.009449 покупка с банковской карты</p>
                         <p>Все варианты пополнения аккаунта смотрите <a href="#" class="links-accent">здесь.</a></p>
                     </div>
+
+                    <button class="btn btn-accent d-mobile">КУПИТЬ</button>
                 </div>
             </div>
         </div>
@@ -369,7 +371,7 @@
 
                     </div>
 
-                    <a href="#" class="btn btn-accent">ПОДПИСАТЬСЯ</a>
+                    <button class="btn btn-accent">ПОДПИСАТЬСЯ</button>
 
                 </form>
             </div>
